<resources>
    <string name="app_name">TipCalculator</string>
    <string name="base">Base</string>
    <string name="_24">24%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="_19_96">19.96</string>
    <string name="_103_11">103.11</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percentage">Percentage</string>
    <string name="total_amount">total Amount</string>
    <string name="tip_amount">Tip Amount</string>
</resources>